프로젝트_브란도_반응형_박스블럭_폰트_사이즈

--- a/11_09/11_09_프로젝트_브란도_레스토랑_반응형_웹사이트제작_혼자하기/index.html
+++ b/11_09/11_09_프로젝트_브란도_레스토랑_반응형_웹사이트제작_혼자하기/index.html
@@ -116,12 +116,22 @@
         </section>
         <!-- 섹션 2 3 4가 똑같아서 2만 잘 만들어서 3 4에 붙여넣기 하면 됨 -->
 
-        <section id="section02" class="section234"> <!-- 줄구분 -->
-            <div class="wrap"> <!-- 전체 넓이 1170px로 써줌  -->
-                <div class="gap"> <!-- 실제 넓이는 1140px이라 양쪽 15px씩 여백용 요소 넣어줌 -->
-                    <div class="container"> <!-- 문서 실제 작업 공간 여기서부터 넓이 써줌 -->
-                        <div class="content-wrap"> <!-- 식사 시간, 메뉴 등에 대한 설명 -->
-                            <!-- 지금부터 고정값으로 높이 먼저 잡아주고 나중에 제이쿼리로 비율해주면 됨  -->
+        <section id="section02" class="section234">
+            <div class="wrap">
+                <div class="gap">
+                    <div class="container">
+                        <div class="content-wrap">
+                            <div class="text-gap">
+                                <div class="text-wrap">
+                                    <h2><img src="./img/icon-breakfast.png" alt="icon-breakfast"></h2>
+                                    <h3>BREAKFAST</h3>
+                                    <h4>EVERY DAY 08:00 - 10:00</h4>
+                                    <h5><img src="./img/separator.png" alt="separator"></h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                                        Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s.</p>
+                                    <span><a href="#section03" class="smooth-btn" title="아래로 이동"><img src="./img/arrow-down.png" alt="arrow-down"></a></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -133,8 +143,15 @@
                     <div class="container">
                         <div class="content-wrap">
                             <div class="text-gap">
-                                <div class="text-wrap"></div>
-
+                                <div class="text-wrap">
+                                    <h2><img src="./img/icon-lunch.png" alt="icon-breakfast"></h2>
+                                    <h3>LUNCH</h3>
+                                    <h4>EVERY DAY 13:00 - 15:00</h4>
+                                    <h5><img src="./img/separator.png" alt="separator"></h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                                       Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s.</p>
+                                    <span><a href="#section04" class="smooth-btn" title="아래로 이동"></a></span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -147,8 +164,15 @@
                     <div class="container">
                         <div class="content-wrap">
                             <div class="text-gap">
-                                <div class="text-wrap"></div>
-
+                                <div class="text-wrap">
+                                    <h2><img src="./img/icon-breakfast.png" alt="icon-breakfast"></h2>
+                                    <h3>DINNER</h3>
+                                    <h4>EVERY DAY 19:00 - 22:00</h4>
+                                    <h5><img src="./img/separator.png" alt="separator"></h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                                       Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s.</p>
+                                    <span><a href="#section05" class="smooth-btn" title="아래로 이동"></a></span>
+                                </div>
                             </div>
                         </div>
                     </div>
