--- a/11_09/index.html
+++ b/11_09/index.html
@@ -130,7 +130,7 @@
                                     <h5><img src="./img/separator.png" alt="seperator 아이콘"></h5>
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                         Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s.</p>
-                                    <span><a href="#section03" title="섹션3 이동"><img src="./img/arrow-down.png" alt="아래로 이동"></a></span>
+                                    <span><a href="#section03" class="smooth-btn" title="섹션3 이동"><img src="./img/arrow-down.png" alt="아래로 이동"></a></span>
                                 </div> <!-- 아무런 여백없이 글자(내용)만 랩핑 -->
                             </div>
                         </div>
@@ -140,19 +140,19 @@
         </section>
 
         <section id="section03" class="section234">
-            <div class="wrap">
-                <div class="gap">
-                    <div class="container">
-                        <div class="content-wrap">
-                            <div class="text-gap">
-                                <div class="text-wrap">
-                                    <h2><img src="./img/icon-breakfast.png" alt="breakfast 아이콘"></h2>
-                                    <h3>BREAKFAST</h3>
-                                    <h4>EVERY DAY 08:00 - 10:00</h4>
+            <div class="wrap"> <!-- 1170 -->
+                <div class="gap"> <!-- margin :0 15px -->
+                    <div class="container"> <!-- 1140 -->
+                        <div class="content-wrap"> <!-- 450*550 -->
+                            <div class="text-gap"> <!-- 여백 80 -->
+                                <div class="text-wrap"> <!-- 텍스트박스 290 -->
+                                    <h2><img src="./img/icon-lunch.png" alt="breakfast 아이콘"></h2>
+                                    <h3>LUNCH</h3>
+                                    <h4>EVERY DAY 13:00 - 15:00</h4>
                                     <h5><img src="./img/separator.png" alt="seperator 아이콘"></h5>
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                         Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s.</p>
-                                    <span><a href="#section03" title="섹션3 이동"><img src="./img/arrow-down.png" alt="아래로 이동"></a></span>
+                                    <span><a href="#section04" class="smooth-btn" title="섹션3 이동"><img src="./img/arrow-down.png" alt="아래로 이동"></a></span>
                                 </div> 
                             </div>
                         </div>
@@ -162,19 +162,19 @@
         </section>
 
         <section id="section04" class="section234">
-            <div class="wrap">
-                <div class="gap">
-                    <div class="container">
-                        <div class="content-wrap">
-                            <div class="text-gap">
-                                <div class="text-wrap">
+            <div class="wrap"> 
+                <div class="gap"> 
+                    <div class="container"> 
+                        <div class="content-wrap"> 
+                            <div class="text-gap"> 
+                                <div class="text-wrap"> 
                                     <h2><img src="./img/icon-breakfast.png" alt="breakfast 아이콘"></h2>
-                                    <h3>BREAKFAST</h3>
-                                    <h4>EVERY DAY 08:00 - 10:00</h4>
+                                    <h3>DINNER</h3>
+                                    <h4>EVERY DAY 19:00 - 22:00</h4>
                                     <h5><img src="./img/separator.png" alt="seperator 아이콘"></h5>
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                         Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s.</p>
-                                    <span><a href="#section03" title="섹션3 이동"><img src="./img/arrow-down.png" alt="아래로 이동"></a></span>
+                                    <span><a href="#section05" class="smooth-btn" title="섹션3 이동"><img src="./img/arrow-down.png" alt="아래로 이동"></a></span>
                                 </div> 
                             </div>
                         </div>
