프로젝트_브란도_슬라이드_fadeIn/Out_모달창_구현_완료

--- a/11_10/11_10_프로젝트_브란도_레스토랑_반응형_웹사이트제작/index.html
+++ b/11_10/11_10_프로젝트_브란도_레스토랑_반응형_웹사이트제작/index.html
@@ -361,18 +361,18 @@
 
     <div class="modal">
         <div class="img-wrap">
-            <a href="#" title="modal-image">
-                <img src="./img/restaurant-img29.jpg" alt="모달창 이미지 1">
+            <a href="javascript:" class="img-btn" title="modal-image">
+                <img src="./img/restaurant-img25.jpg" alt="모달창 이미지 1">
             </a>
         </div>
         <span class="arrow-left">
-            <a href="#" class="arrow-left-btn">◁</a>
+            <a href="javascript:" class="arrow-left-btn">◁</a>
         </span>
         <span class="arrow-right">
-            <a href="#" class="arrow-right-btn">▷</a>
+            <a href="javascript:" class="arrow-right-btn">▷</a>
         </span>
         <span class="close">
-            <a href="#" class="close-btn" title="Close Button">×</a>
+            <a href="javascript:" class="close-btn" title="Close Button">×</a>
         </span>
     </div>
     
